--- a/unit3/assets/css/style.css
+++ b/unit3/assets/css/style.css
@@ -1,23 +1,37 @@
 body {
-	background-image: url("assets/images/stripes.png");
 	background-color: #535a6a;
-	background-size: cover;
-	background-position: right;
-	font-family: Helvetica, Arial, sans-serif;
-	color: white;
-	font-size: 26px;
+	background-image: url("../images/stripes.png");
+	background-repeat: repeat-x;
+	background-position: top right;
+	margin: 0px;
+	padding: 0px;
 }
 
 hr {
-	width: 100px;
-	color: #fd6e6e;
-	position: left;
+	background-color: #fd6e6e;
+	height: 2px;
+	border: 0px;
 }
 
-a {
-
+#column1 {
+	margin-left: 100px;
+	margin-top: 100px;
+	margin-bottom: auto;
+	font-family: Helvetica, Arial, sans-serif;
+	color: white;
+	font-size: 26px;
+	vertical-align: top;
+	display: inline-block;
+	line-height: 50px;
 }
 
-#main {
-	margin-left: 200px;
+#line {
+	width: 40px;
+	background-color: #fd6e6e;
+}
+
+#column2 {
+	margin-top: 75px;
+	vertical-align: top;
+	display: inline-block;
 }
