--- a/unit4/css/stylesheet.css
+++ b/unit4/css/stylesheet.css
@@ -23,9 +23,10 @@ body{
 }
 
 #content{
-	width: 700px;
 	margin-right: auto;
 	margin-left: auto;
+	padding-right: 10%; 
+	padding-left: 10%;
 }
 
 .cupcake{
@@ -96,15 +97,24 @@ p{
 
 }
 
-button{
-	font-family: 'Roboto Condensed', sans-serif;
-	font-size: 16pt;
-	text-transform: uppercase;
-	letter-spacing: 4px;
-	color: #ffffff;
+#button{
 	background-color: #f8aca5;
 	border-width: 0;
 	width: 160px;
 	height: 70px;
 	margin: 40px;
+	position: center;
+	margin-right: auto;
+	margin-left: auto;
+	padding: 0;
+}
+
+.button{
+	font-family: 'Roboto Condensed', sans-serif;
+	font-size: 16pt;
+	text-transform: uppercase;
+	letter-spacing: 4px;
+	color: #ffffff;	
+	text-decoration: none;
+	margin-top: 20px;
 }
