--- a/unit4/css/stylesheet.css
+++ b/unit4/css/stylesheet.css
@@ -94,27 +94,36 @@ p{
 	color: #58595b;
 	line-height: 2;
 	margin: 0;
-
 }
 
-#button{
-	background-color: #f8aca5;
-	border-width: 0;
-	width: 160px;
-	height: 70px;
-	margin: 40px;
-	position: center;
-	margin-right: auto;
-	margin-left: auto;
+#button_outside{
 	padding: 0;
+	width: 160px;
+    height: 70px;
+    margin-top: 40px;
+    margin-right: auto;
+	margin-left: auto;
 }
 
-.button{
-	font-family: 'Roboto Condensed', sans-serif;
+#button_text{
+	width: 160px;
+}
+
+a:link, a:visited {
+    display: block;
+    font-family: 'Roboto Condensed', sans-serif;
 	font-size: 16pt;
 	text-transform: uppercase;
 	letter-spacing: 4px;
 	color: #ffffff;	
-	text-decoration: none;
-	margin-top: 20px;
+    background-color: #f8aca5;
+    text-decoration: none;
 }
+
+a:hover, a:active {
+    background-color: #db9791;
+}
+
+
+
+
