--- a/unit4/css/stylesheet.css
+++ b/unit4/css/stylesheet.css
@@ -8,13 +8,7 @@ body{
 	border-color: #f8aca5;
 }
 
-#short{
-	margin: 0;
-	padding: 0;
-	height: 80px
-}
-
-#header{
+header{
 	margin: 0;
 	padding: 0;
 	background-image: url("../images/header_background.jpg");
@@ -22,33 +16,14 @@ body{
 	background-size: cover;
 }
 
-#content{
-	margin-right: auto;
-	margin-left: auto;
-	padding-right: 10%; 
-	padding-left: 10%;
-}
-
-.cupcake{
-	width: 40px;
-	height: auto;
-	margin: 30px;
-
-}
-
-.ampersand{
-	position: relative;
-	top: -180px;
-	font-family: 'Libre Baskerville', serif;
-	font-style: italic;
-	font-weight: normal;
-	font-size: 90pt;
-	padding-bottom: 0;
-}
-
 #header_content{
-	padding-top: 100px;
+	padding-top: 80px;
 	padding-bottom: 100px;
+}
+
+#wordmark{
+	margin-bottom: 0px;
+	padding: 0;
 }
 
 hr{
@@ -56,15 +31,27 @@ hr{
 	background-color: #ffffff;
 	height: 2px;
 	border: 0px;
-	margin-top: 30px;
+	margin: 30px, 0, 0, 0;
+	padding: 0;
 }
 
 h1{
 	font-family: 'Roboto Condensed', sans-serif;
 	font-size: 45pt;
 	text-transform: uppercase;
-	word-spacing: 110px;
 	color: #ffffff;
+	padding: 0;
+	margin: 0;
+}
+
+.ampersand{
+	position: relative;
+	bottom: -20px;
+	font-family: 'Libre Baskerville', serif;
+	font-style: italic;
+	font-variant: normal;
+	font-weight: lighter;
+	font-size: 90pt;
 }
 
 h2{
@@ -74,8 +61,14 @@ h2{
 	color: #ffffff;
 	font-weight: 400;
 	letter-spacing: 20px;
-	margin-top: 40px;
 	}	
+
+#content{
+	margin-right: auto;
+	margin-left: auto;
+	padding-right: 10%; 
+	padding-left: 10%;
+}
 
 h3{	
 	font-family: 'Playfair Display', serif;
@@ -84,6 +77,12 @@ h3{
 	letter-spacing: 2px;
 	color: #58595b;
 	line-height: 2;
+}
+
+.cupcake{
+	width: 40px;
+	height: auto;
+	margin: 30px;
 }
 
 p{
