--- a/unit4/css/stylesheet.css
+++ b/unit4/css/stylesheet.css
@@ -143,7 +143,7 @@ hr.footer_hr{
 }
 
 footer{
-	border-top: 1px, solid, #58595b
+	border-top: 1px, solid, #58595b;
 	padding: 20px;
 	margin: 20px;
 }
@@ -157,6 +157,3 @@ a{
 	line-height: 2;
 	text-decoration: none;
 }	
-
-
-
