--- a/unit6/css/styles.css
+++ b/unit6/css/styles.css
@@ -183,6 +183,11 @@ footer a{
 	text-align: right;
 }
 
+#free{
+	float: right;
+	margin-left: 20px;
+}
+
 h1 {
 	font-family: Cortado-Web, Roboto Condensed, sans-serif;
     font-weight: 400;
@@ -226,7 +231,14 @@ h3{
 h4{
 	font-family: Roboto, sans-serif;
 	font-size: 12pt;
+	font-weight: 900;
+}
+
+h5{
+	font-family: Roboto, sans-serif;
 	font-weight: 500;
+	font-size: 15pt;
+	line-height: 1.5em;
 }
 
 
@@ -237,7 +249,7 @@ header {
 #intro{
 	color: white;
 	width: 400px;
-	padding: 70px 0 50px 10px;
+	padding: 50px 0 50px 10px;
 	display: inline-block;
 	text-align: left;
 	margin: 0 auto;
@@ -297,13 +309,24 @@ p {
 
 strong {
 	font-family:'Roboto', sans-serif;
+	font-weight: 700;
+	letter-spacing: .04em;
 }
 
 #top {
 	padding: 20px 12% 20px 0;
 }
 
+ul{
+	font-family:'Roboto-light', sans-serif;
+	font-size: 11pt;
+	line-height: 1.8em;
+	list-style-type: disc;
+	list-style-position: inside;
+}
+
 #video{
 	float: left;
 }
+
 
