--- a/theo/css/styles.css
+++ b/theo/css/styles.css
@@ -38,7 +38,7 @@ body {
 }
 
 #contact{
-	background-color: #013751;
+	background: #013751 url("../images/footer-BG.png") no-repeat right bottom;
 	padding: 60px 20% 60px 20%;
 	text-align: left;
 	margin: 0px auto;
@@ -46,6 +46,7 @@ body {
 }
 
 #contact a{
+
 	text-decoration: none;
 	color: #ffffff;
 }
@@ -80,14 +81,14 @@ h1 {
 h2{
 	font-family: Georgia, serif;
 	font-size: 2.5em;
-	line-height: .8em;
+	line-height: 1.1em;
 	letter-spacing: .1em;
 }
 
 h3{
 	font-family: Georgia, serif;
 	font-size: 2em;
-	line-height: .8em;
+	line-height: 1em;
 }
 
 h4{
@@ -95,7 +96,7 @@ h4{
 }
 
 header {
-	background: url("images/header-BG.png") no-repeat top left #026B9E;
+	background: #026B9E url("../images/header-BG.png") no-repeat left top;
 	padding: 0px 0% 0px 0%;
 	color: #ffffff;
 }
@@ -123,226 +124,78 @@ p {
 
 
 
-
-}
-
-@media only screen and (max-width: 1000px){
-	
-	#caption{
-		float: none;
-		text-align: center;
-		width: 100%;
-	}
-
-	#column1, #column2{
-		float: none;
-		width: 100%;
-		margin: 10px auto;
-		text-align: center;
-	} 
-
-	#column1a{
-		width: 25%;
-	}
-
-	.download_button{
-		float: none;
-	}
-
-	#content1 img{
-		width: 28%;
-		height: 28%;
-	}
-
-
-	#intro{
-		float: none;
-		text-align: center;
-		width: 80%;
-		margin: 0px auto;
-	}
-
-	h3{
-		text-align: center;
-	}
-
-	#logo{
-		float: none;
-	}
-
-	nav{
-		width: 100%;
-		margin: 20px; auto;
-		float: none;
-	}
-
-	nav a{
-		float: none;
-	}
-
-	#slideshow{
-		float: none;
-		text-align: center;
-		width: 60%;
-		margin: 0px auto;
-	}
-
-	#template-screenshare{
-		text-align: center;
-		width: 80%;
-		float: none;
-		padding-top: 40px;
-	}
-}
-
-@media only screen and (max-width: 800px){
-
-}
-
-@media only screen and (max-width: 500px){
-
-	.download_button{
-		float: none;
-		width: 100%;
-		margin: 20px 0px;
-
-	}
-
-	.download_button a{
-		width: 100%;
-		float: none;
-		padding: 1em 20%;
-		font-size: .9em;
-	}
-
-	#column1a img{
-		width: 80%;
-		height: 0%;
-		padding-top: 5px;
+@media only screen and (max-width: 1030px){
+	#column2{
+		width: 50%;
+		float: right;
+		margin-left: 20px;
 	}
 
 	#column1{
-		float: none;
-	}
-
-	#column1b{
-		width: 60%;
-		padding-top: 0px;
-	}
-
-	#column2b{
-		width: 60%;
-		padding-top: 5px;
-	}
-
-	#column2a img{
-		height: 60%;
+		width: 40%;
+		text-align: right;
 	}
 
 	#contact{
-		width: 90%;
-		padding: 0 0;
+		padding: 60px 10% 60px 10%;
+	}
+
+	#content{
+		padding: 60px 12%; 
+
+}
+	
+	
+
+@media only screen and (max-width: 770px){
+	#column2{
+		width: 60%;
+		float: right;
+		margin-left: 10px;
+	}
+
+	#column1{
+		width: 30%;
+	}
+
+	#contact{
+		padding: 50px 10% 50px 10%;
 	}
 	
-	#content1{
-		margin: 5% 0px;
-	}
-
-	#content1 img{
-		width: 90%;
-		height: 90%;
-	}
-
-	#content3{
-		padding: 40px 0 20px 0;
-		margin: 0 0;
-	}
-
-	#content4{
-		padding: 40px 0 70px 0;
-		margin: 0 0;
-	}
-
-	.email_button a{
-		padding: 1em 4em;
-	}
-
-	#footer{
-
-	} 
-
-	#footerlogo, #footertext{
-		float: none;
-		text-align: center;
-		padding: 0 0;
-	}
-
-	#free{
-		float: none;
-		margin: 0px 0px 15px 0px;
-	}
-
-	h1, h2{
-		font-size: 3.5em;
-	}
+	#coming_soon{
+	padding: 20px 5px;
+	float: none;
+}
 
 	h3{
-		font-size: 3em;
-		line-height: 1em;
-	}
+	font-size: 1.5em;
+	line-height: .8em;
+}
 
-	h4{
-		font-size: 1.1em;
-	}
 
-	header, #content2{
-		padding: 8% 5%;
-	}
-
-	#intro{
-		width: 100%;
-	}
-
-	#logo{
-		padding-bottom: 15px;
-	}
-
-	nav{
-		margin: 0px 0px;
-		width: 100%;
-	}
-
-	nav a{
-		width: 100%;
-		text-align: center;
+@media only screen and (max-width: 645px){
+	#column2{
+		width: 90%;
 		float: none;
-		padding: 1em 0px;
+		margin-left: none;
 	}
 
-	p{
-		font-size: .8em;
+	#column1{
+		width: 90%;
+		text-align: left;
 	}
 
-	#slideshow{
-		width: 95%;
-		margin-bottom: 15px;
-	}
-
-	.stand2, .stand3{
+	.fullsite{
 		display: none;
 	}
 
-	#top{
-		padding: 15px 0px 0px 0px;
-	}
-
-	#top_button{
-		display: block;
-	}
-
-	#template-screenshare{
-		width: 90%;
-		height: auto;
-	}
 }
+	
+@media only screen and (max-width: 430px){
+	#column2{
+		width: 100%;
+		float: none;
+		margin-left: none;
+	}
+
 
