--- a/theo/css/styles.css
+++ b/theo/css/styles.css
@@ -200,15 +200,27 @@ p {
 
 }
 	
-@media only screen and (max-width: 430px){
+@media only screen and (max-width: 500px){
 	#column2{
 		width: 100%;
 		float: none;
 		margin-left: none;
 	}
 
-	.phone, .email, .pin{
-		display: none;
+	p{
+		font-size: .9em;
+	}
+
+	h1{
+		font-size: 4em;
+	}
+
+	h2{
+		font-size: 1.5em;
+	}
+
+	h4{
+		font-size: .8em;
 	}
 
 
